# neural-surfing

./: README.md
framework/: README.md  demo.py  demo_shallow_problem.py  demo_simple_problem.py  demo_stripe_problem.py  generate_docs_html.sh  generate_docs_pdf.sh  model.py  pyproject.toml  util.py
framework/agents/: __init__.py  agent.py  greedy_probing.py  loss_with_goal_line_deviation.py  mse.py  sampling.py  simulated_annealing.py  util.py
framework/docs/nf/: index.html
framework/docs/nf/agents/: greedy_probing.html  index.html  loss_with_goal_line_deviation.html  mse.html  sampling.html  simulated_annealing.html  util.html
framework/docs/nf/experiment/: index.html  metrics.html
framework/docs/nf/experiment/visualisations/: histogram.html  index.html  scatter2d.html
framework/docs/nf/problems/: index.html  shallow_problem.html  simple_problem.html  stripe_problem.html  util.html
framework/experiment/: __init__.py  experiment.py  metrics.py
framework/experiment/visualisations/: __init__.py  histogram.py  scatter2d.py  scatter3d.py  visualisation.py
framework/nf/: __init__.py
framework/nf/agents/: __init__.py  greedy_probing.py  loss_with_goal_line_deviation.py  mse.py  sampling.py  simulated_annealing.py  util.py
framework/nf/experiment/: __init__.py  metrics.py
framework/nf/experiment/visualisations/: __init__.py  histogram.py  scatter2d.py
framework/nf/problems/: __init__.py  shallow_problem.py  simple_problem.py  stripe_problem.py  util.py
framework/problems/: problem.py  shallow_problem.py  simple_problem.py  stripe_problem.py  util.py
(+50 files in other folders)
